kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resortsLite
  labels:
    name: resortsLite
    app: resortsLite
